--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -64,7 +64,7 @@ grafana:
     - name: GF_AUTH_OAUTH_AUTO_LOGIN
       value: 'true'
     - name: GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH
-      value: "contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer' || contains(groups, 'admin')"
+      value: "contains(groups, 'admin')&& 'Admin' || contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'"
     - name: GF_SERVER_ROOT_URL
       value: https://grafana.yanello.net
   plugins:
