--- a/argocd/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/infra/monitoring/vm-k8s-stack/values.yaml
@@ -55,18 +55,12 @@ grafana:
     passwordKey: grafana-admin-password
   envFromSecret: grafana-env-secrets
   env:
-    - name: GF_AUTH_GENERIC_OAUTH_ENABLED
-      value: 'true'
-    - name: GF_AUTH_GENERIC_OAUTH_NAME
-      value: authentik
-    - name: GF_AUTH_GENERIC_OAUTH_SCOPES
-      value: openid profile email
-    - name: GF_AUTH_OAUTH_AUTO_LOGIN
-      value: 'true'
-    - name: GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH
-      value: "contains(groups, 'admin') && 'Admin' || contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'"
-    - name: GF_SERVER_ROOT_URL
-      value: https://grafana.yanello.net
+    GF_AUTH_GENERIC_OAUTH_ENABLED: 'true'
+    GF_AUTH_GENERIC_OAUTH_NAME: 'authentik'
+    GF_AUTH_GENERIC_OAUTH_SCOPES: 'openid profile email'
+    GF_AUTH_OAUTH_AUTO_LOGIN: 'true'
+    GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(groups, 'admin') && 'Admin' || contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'"
+    GF_SERVER_ROOT_URL: 'https://grafana.yanello.net'
   plugins:
     - victoriametrics-logs-datasource
   datasources:
