--- a/argocd/vaultwarden/manifests/secret-generator.yaml
+++ b/argocd/vaultwarden/manifests/secret-generator.yaml
@@ -11,4 +11,4 @@ metadata:
           # otherwise, path should be relative to manifest files, like
           # path: ../../../ksops
 files:
-  - ./vw-admin-secret.enc.yaml
+  - ./manifests/vw-admin-secret.enc.yaml
