--- a/argocd/vaultwarden/kustomization.yaml
+++ b/argocd/vaultwarden/kustomization.yaml
@@ -2,11 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - vs.yaml
-  - http-route.yaml
+  - manifests/vs.yaml
+  - manifests/http-route.yaml
 
 generators:
-  - ./secret-generator.yaml
+  - manifests/secret-generator.yaml
 
 helmCharts:
     - name: vaultwarden
