vaultwarden admin authpol

--- a/argocd/infra/istio/resources/authPol.yaml
+++ b/argocd/infra/istio/resources/authPol.yaml
@@ -57,3 +57,27 @@ spec:
               - "/artboard/{**}"
               - "/assets/{**}"
               - "/api/resume/public/{**}"
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: block-vaultwarden-admin
+spec:
+  targetRefs:
+    - name: gateway-api
+      kind: Gateway
+      group: gateway.networking.k8s.io
+  action: DENY
+  rules:
+    - from:
+        - source:
+            notRemoteIpBlocks:
+              - "10.0.0.0/8"
+              - "172.16.0.0/12"
+              - "192.168.0.0/16"
+      to:
+        - operation:
+            hosts:
+              - bitwarden.yanello.net
+            paths:
+              - "/admin*"
