--- a/argocd/infra/istio/resources/authPol.yaml
+++ b/argocd/infra/istio/resources/authPol.yaml
@@ -14,12 +14,14 @@ spec:
         - source:
             remoteIpBlocks:
               - "10.0.0.0/8"
+              - "172.16.0.0/12"
               - "192.168.0.0/16"
     # Allow WAN traffic only to specific subdomains
     - from:
         - source:
             notRemoteIpBlocks:
               - "10.0.0.0/8"
+              - "172.16.0.0/12"
               - "192.168.0.0/16"
       to:
         - operation:
@@ -36,13 +38,14 @@ spec:
               - homeassistant.yanello.net
               - overseerr.yanello.net
               - immich.yanello.net
-              #- bitwarden.yanello.net
+              - bitwarden.yanello.net
               - mealie.yanello.net
               - authentik.yanello.net
     - from:
         - source:
             notRemoteIpBlocks:
               - "10.0.0.0/8"
+              - "172.16.0.0/12"
               - "192.168.0.0/16"
       to:
         - operation:
@@ -54,13 +57,3 @@ spec:
               - "/artboard/{**}"
               - "/assets/{**}"
               - "/api/resume/public/{**}"
-    # - from:
-    #     - source:
-    #         notRemoteIpBlocks:
-    #           - "192.168.0.0/16"
-    #   to:
-    #     - operation:
-    #         hosts:
-    #           - bitwarden.yanello.net
-    #         notPaths:
-    #           - "/admin*"
