--- a/argocd/infra/istio/resources/authPol.yaml
+++ b/argocd/infra/istio/resources/authPol.yaml
@@ -7,7 +7,7 @@ spec:
     - name: gateway-api
       kind: Gateway
       group: gateway.networking.k8s.io
-  action: DENY # denied non-matching
+  action: ALLOW # denied non-matching
   rules:
     # Allow all traffic from internal network (LAN)
     - from:
