--- a/argocd/infra/istio/resources/istio-gw.yaml
+++ b/argocd/infra/istio/resources/istio-gw.yaml
@@ -39,7 +39,8 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: gateway-api
-  # annotations:
+  annotations:
+    proxy.istio.io/config: '{"gatewayTopology" : { "numTrustedProxies": 2 } }'
   #   cert-manager.io/cluster-issuer: letsencrypt-prod
   #   cert-manager.io/common-name: yanello.net
   #   cert-manager.io/dns-names: "*.yanello.net,yanello.net"
