--- a/argocd/infra/istio/kustomization.yaml
+++ b/argocd/infra/istio/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/standard-install.yaml
-  #- app.yaml
+  - app.yaml
   # - resources/authPol.yaml
   # - resources/cert.yaml
   # - resources/envoyFilter.yaml
