--- a/argocd/frigate/manifests/values.yaml
+++ b/argocd/frigate/manifests/values.yaml
@@ -44,11 +44,11 @@ config: |
     password: "{FRIGATE_MQTT_PASSWORD}"
 
   detectors:
-    coral:
-      type: edgetpu
-      device: pci:0
-    # cpu1:
-    #   type: cpu
+    # coral:
+    #   type: edgetpu
+    #   device: pci:0
+    cpu1:
+      type: cpu
 
   model:
     labelmap:
