--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -15,4 +15,4 @@ ipam:
     clusterPollIPv4PodCIDRList: 10.42.0.0/16
 k8sServiceHost: 192.168.10.100
 k8sServicePort: 8443
-devices: eth0
+devices: eth0 en3s0 br0.100
