--- a/argocd/infra/cilium/kustomization.yaml
+++ b/argocd/infra/cilium/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 helmCharts:
   - name: cilium
-    repo: https://nextcloud.github.io/helm/
+    repo: https://helm.cilium.io
     version: "1.17.1"
     releaseName: cilium
     namespace: cilium
