cilium ingress off

--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -1,6 +1,6 @@
 kubeProxyReplacement: true
 ingressController:
-  enabled: true
+  enabled: false
   loadBalancerMode: shared
   default: true
 l2announcements:
