--- a/argocd/infra/cilium/values.yaml
+++ b/argocd/infra/cilium/values.yaml
@@ -18,3 +18,9 @@ ipam:
 k8sServiceHost: 192.168.10.100
 k8sServicePort: 6443
 devices: eth0,enp3s0,br0.100,br0,br100,en6s0,enx207bd2cf23ca
+gatewayAPI:
+  enabled: true
+envoy:
+  securityContext:
+    capabilities:
+      keepCapNetBindService: true
