move snapraid folder3

--- a/argocd/infra/storage/nfs/snapraid.yaml
+++ b/argocd/infra/storage/nfs/snapraid.yaml
@@ -44,4 +44,4 @@ spec:
                         - marcus-server
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: kube-system
+    namespace: snapraid
