--- a/argocd/open-webui/manifests/secrets.yaml
+++ b/argocd/open-webui/manifests/secrets.yaml
@@ -7,11 +7,8 @@ stringData:
     OAUTH_CLIENT_ID: ENC[AES256_GCM,data:0+q0UITOhkyGWqbDGLhcHjbEUXfiAE4IUOM4mlkLvZb3QFbUXBQmqg==,iv:PJUzD2qAhlq0R21NZFx3RmGkV4IyyhOJJFJKjJo5yYk=,tag:egTcvDVP/Erm4tIv/aSDTg==,type:str]
     OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:VDZDwQkIpOiZuy8iwh4DNj7SKlFfJN1VOa9+i+aJmIcgX+Fqrdhv5WjsWIp0NoTin3WTMxWuaS3owy2rplbEhji+o4/aS4lXVnnGyxAVMOb5p3pdkeNXz1hAZUQJFlBKpbd0s3ZXH287oM3cul3Ij/Wk7LBQqqbcrcivG9+3P1g=,iv:b3LCaPgXwq0hDBge5ci+gh5uO9Dwa5RvU+LikCGj25I=,tag:+qVmUg06W8qUL1+w5SxEAQ==,type:str]
     OPENID_PROVIDER_URL: ENC[AES256_GCM,data:1tDIBWdg/Vxv4oUlvYe1nSzpvj3eoUEj7pjlRF95ZvrMUI+HKDQeWGRfHOxzgwi3SOzArb+avvuHixxnX+rPTgMCehdLH8qkS3qDVnzXOYuJGaWhBB19,iv:5yBa4C/KtV71VhwQ1jCGJMjlqQCJ+XRS4igfd5z2aNs=,tag:oEqdzEhXmWSgmY5XSrFXzQ==,type:str]
+    OAUTH_PROVIDER_URL: ENC[AES256_GCM,data:2ik9MmuFImszjwx9Bbl3836At6S3PkU6V58/RlgAgV/QpcXx26qAtpoYX4U+aGEH90kQ9lyhGefu81sf0pBCHi2RMYpP9Yp+SdLqfWwviq8De8lsHQQo,iv:srF5Q5jicii+VGIMCQgA7MMpRtL/z7mHhNe2ucXxBTI=,tag:TdnelD8NAqSC4FrMN6PmeA==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
           enc: |
@@ -22,8 +19,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T19:53:23Z"
-    mac: ENC[AES256_GCM,data:E3Z9jv0v66WeG1OI9UPpJlWrHGiTE54AJl49WGpfLCwd7MbradXZudlXmbgrjLNzZfvEGmWozgF65OHVNL3tAwXlKYMaZKfpqvmXy4GDthyaLqvC57UdMtYL3Q+9bfEu+Zq4kmI6tW/Qx6Dx5efD9HuobZblXvUFcMKTTEPUp3E=,iv:jPIqq4gK8tSTpN+j6pgdC5UXlFpCtu5sSTYyjxhpafo=,tag:xOWyFcNB8q7J1o4kVFR5Yw==,type:str]
-    pgp: []
+    lastmodified: "2025-05-21T02:12:55Z"
+    mac: ENC[AES256_GCM,data:gPnms6UoNWg3cU5nI7PQf0OhGiCRu30bKu63NB/fqxqBKCtkQZy8HPqWeVUcdFRPFipXm1SYRQUaMZhTnV+8c1B2w+QP6cv+DncbIoMfCigSU4lbZ9xAZwCusKP7kvetUrc8tQ6Jnhav2NUsaA7VpmqKoNd8WQLY48VB2HW0Kjw=,iv:INcYaV7nJM5fDP65sDak3LPACi9dLvISQ3LbIsgr04Y=,tag:9Kggf3gHcovyR1S13m5vzg==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.4
+    version: 3.10.2
