--- a/argocd/stirling-pdf/values.yaml
+++ b/argocd/stirling-pdf/values.yaml
@@ -1,3 +1,9 @@
 persistence:
   enabled: true
   storageClass: snapraid-storage
+
+# probes:
+#   liveness:
+#     enabled: false
+#   readiness:
+#     enabled: false
