disable bookinfo ingress

--- a/argocd/dev/bookinfo/kustomization.yaml
+++ b/argocd/dev/bookinfo/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
   
 resources:
   - ./platform/kube/bookinfo.yaml
-  - ./platform/kube/bookinfo-ingress.yaml
+  #- ./platform/kube/bookinfo-ingress.yaml
   #- ./platform/kube/bookinfo-certificate.yaml
   - ./networking/fault-injection-details-v1.yaml
   - ./networking/virtual-service-reviews-v2-v3.yaml
