--- a/argocd/infra/cilium/kustomization.yaml
+++ b/argocd/infra/cilium/kustomization.yaml
@@ -3,6 +3,9 @@ kind: Kustomization
 
 resources:
   - https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/standard-install.yaml
+  - manifests/cert.yaml
+  - manifests/gateway.yaml
+
 
 helmCharts:
   - name: cilium
