--- a/argocd/infra/esops/kustomization.yaml
+++ b/argocd/infra/esops/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 helmCharts:
   - name: external-secrets
     repo: https://charts.external-secrets.io
-    version: v0.17.1-rc1
+    version: v0.17.0
     valuesInline:
       bitwarden-sdk-server:
         enabled: true
