--- a/argocd/infra/esops/kustomization.yaml
+++ b/argocd/infra/esops/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 helmCharts:
   - name: external-secrets
     releaseName: external-secrets
+    namespace: esops
     repo: https://charts.external-secrets.io
     version: v0.17.0
     valuesInline:
