--- a/argocd/infra/esops/kustomization.yaml
+++ b/argocd/infra/esops/kustomization.yaml
@@ -2,7 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - certificate.yaml
+  - ./manifests/certificate.yaml
+  - ./manifests/secretstore.yaml
+
+generators:
+  - ./manifests/secret-generator.yaml
 
 helmCharts:
   - name: external-secrets
