--- a/argocd/infra/esops/manifests/secretstore.yaml
+++ b/argocd/infra/esops/manifests/secretstore.yaml
@@ -11,7 +11,7 @@ spec:
         secretRef:
           credentials:
             key: token
-            name: bitwarden-secrets
+            name: bw-secrets
       bitwardenServerSDKURL: https://bitwarden-sdk-server.default.svc.cluster.local:9998
       organizationID: e639f4d9-bd5b-4f00-955a-b2630105d720
       projectID: 29313e25-76a3-437d-b600-b2e500ddad85
